--- a/tasks/templates/tasks/done.html
+++ b/tasks/templates/tasks/done.html
@@ -1,7 +1,7 @@
 {% extends "tasks/base.html" %}
 
 {% block main %}
-    {% include "tasks/_header.html" %}
+{% include "tasks/_header.html" %}
     <!-- Tasks -->
     <section
       class="flex flex-1 flex-wrap justify-center gap-3 bg-[#fff0] w-10/12 md:w-11/12 h-full mb-3 rounded-2xl p-3 overflow-y-auto scrollbar-hide"
@@ -15,7 +15,9 @@
           <!-- Left: Title and Description -->
           <div>
             <a href="./task_detail.html">
-              <h1 class="text-green-500 font-semibold text-xl">
+              <h1
+                class="text-green-500 font-semibold text-xl italic line-through"
+              >
                 Create a ToDo App with Django
               </h1>
             </a>
@@ -25,16 +27,15 @@
           </div>
           <!-- Right: Toggle complete mode -->
           <a href="">
-            <i class="bx bx-check-circle bx-sm text-blue-500"></i>
-            <!-- <i class='bx bxs-check-circle'></i> -->
+            <i class="bx bxs-check-circle bx-sm text-green-500"></i>
           </a>
         </div>
         <!-- Line -->
         <hr class="border-t border-gray-200 my-2" />
         <!-- Bottom: Time and Date | Delete -->
         <div class="flex flex-row justify-between">
-          <h2 class="text-gray-500 font-bold">
-            Due Today <span class="font-medium text-gray-400">12:00 pm</span>
+          <h2 class="text-blue-400 font-bold">
+            Completed <i class="bx bxs-badge-check"></i>
           </h2>
           <a href="./delete.html">
             <i class="bx bxs-trash bx-sm text-red-500"></i>
@@ -42,4 +43,5 @@
         </div>
       </div>
     </section>
-{% endblock main  %}
+
+{% endblock main %}
