--- a/tasks/templates/tasks/_header.html
+++ b/tasks/templates/tasks/_header.html
@@ -5,7 +5,7 @@
       <h1 class="text-blue-600 font-bold text-[40px]">Quick ToDo</h1>
       <a
         class="bg-blue-600 py-2 px-4 text-white font-semibold rounded-2xl text-lg mt-4 flex items-center gap-2"
-        href="./add_task.html"
+        href="{% url "tasks:new" %}"
         ><i class="bx bxs-plus-circle bx-sm"></i> Add New</a
       >
     </header>
@@ -14,20 +14,20 @@
       class="bg-white transition-all-[1s] shadow-md w-10/12 rounded-2xl h-auto p-4 flex flex-row justify-around md:w-3/6"
     >
       <a
-        href="./index.html"
+        href="{% url "tasks:home" %}"
         class="text-blue-400 transition duration-300 ease-out hover:ease-in hover:text-blue-500 font-semibold py-1 px-3 flex items-center gap-1"
         ><i class="bx bxs-category"></i>All Tasks</a
       >
       <span class="text-gray-400">|</span>
       <a
-        href="./completed.html"
+        href="{% url "tasks:undone" %}"
         class="font-semibold text-gray-400 py-1 px-3 flex items-center gap-1"
-        ><i class="bx bxs-badge-check"></i>Completed</a
+        ><i class="bx bxs-sad"></i>Undone Tasks</a
       >
       <span class="text-gray-400">|</span>
       <a
-        href="./remaining.html"
+        href="{% url "tasks:done" %}"
         class="font-semibold text-gray-400 py-1 px-3 flex items-center gap-1"
-        ><i class="bx bxs-sad"></i>Todo</a
+        ><i class="bx bxs-badge-check"></i>Done Tasks</a
       >
     </nav>
