--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -14,7 +14,7 @@
         <div class="flex flex-row justify-between">
           <!-- Left: Title and Description -->
           <div>
-            <a href="./task_detail.html">
+            <a href="{% url "tasks:home" %}">
               <h1 class="text-green-500 font-semibold text-xl">
                 Create a ToDo App with Django
               </h1>
@@ -24,7 +24,7 @@
             </p>
           </div>
           <!-- Right: Toggle complete mode -->
-          <a href="">
+          <a href="#">
             <i class="bx bx-check-circle bx-sm text-blue-500"></i>
             <!-- <i class='bx bxs-check-circle'></i> -->
           </a>
@@ -36,7 +36,7 @@
           <h2 class="text-gray-500 font-bold">
             Due Today <span class="font-medium text-gray-400">12:00 pm</span>
           </h2>
-          <a href="./delete.html">
+          <a href="{% url "tasks:delete" %}">
             <i class="bx bxs-trash bx-sm text-red-500"></i>
           </a>
         </div>
