--- a/tasks/templates/tasks/detail.html
+++ b/tasks/templates/tasks/detail.html
@@ -14,7 +14,7 @@
           <!-- Left: Title and Description -->
           <div>
             <h1 class="text-green-500 font-semibold text-xl">
-              Create a ToDo App with Django
+              {{ task.title }}
             </h1>
             <br />
             <h2 class="text-blue-500 font-bold">
@@ -27,17 +27,15 @@
               Description
             </h2>
             <p class="text-gray-500 text-md">
-              Lorem ipsum dolor sit amet consectetur adipiscing elit, urna
-              consequat felis vehicula class ultricies mollis dictumst, aenean
-              non a in donec nulla. Phasellus ante pellentesque erat cum risus
-              consequat imperdiet aliquam, integer placerat et turpis mi eros
-              nec lobortis taciti, vehicula nisl litora.
+              {{ task.description }}
             </p>
           </div>
           <!-- Right: Toggle complete mode -->
-          <a href="">
+          <a href="{% url "tasks:edit" task.id %}" title="Edit">
+            <i class="bx bx-edit bx-sm text-blue-500"></i>
+          </a>
+          <a href="" title="Mak as done">
             <i class="bx bx-check-circle bx-sm text-blue-500"></i>
-            <!-- <i class='bx bxs-check-circle'></i> -->
           </a>
         </div>
         <!-- Line -->
@@ -47,7 +45,7 @@
           <h2 class="text-gray-500 font-bold">
             Due Today <span class="font-medium text-gray-400">12:00 pm</span>
           </h2>
-          <a href="./delete.html">
+          <a href="{% url "tasks:delete" task.id %}" title="Edit">
             <i class="bx bxs-trash bx-sm text-red-500"></i>
           </a>
         </div>
