--- a/tasks/templates/tasks/home.html
+++ b/tasks/templates/tasks/home.html
@@ -6,6 +6,7 @@
     <section
       class="flex flex-1 flex-wrap justify-center gap-3 bg-[#fff0] w-10/12 md:w-11/12 h-full mb-3 rounded-2xl p-3 overflow-y-auto scrollbar-hide"
     >
+    {% for task in tasks %}
       <!-- Task card -->
       <div
         class="w-[355px] flex flex-col shadow-md bg-white h-[120px] rounded-xl p-3"
@@ -14,18 +15,18 @@
         <div class="flex flex-row justify-between">
           <!-- Left: Title and Description -->
           <div>
-            <a href="{% url "tasks:home" %}">
-              <h1 class="text-green-500 font-semibold text-xl">
-                Create a ToDo App with Django
+            <a href="{% url "tasks:detail" task.id %}">
+              <h1 class="text-green-500 font-semibold text-xl{% if task.done %} italic line-through{% endif %}">
+                {{ task.title }}
               </h1>
             </a>
             <p class="text-gray-500 text-md">
-              The app will contain the following...
+              {{ task.description|slice:":40" }}...
             </p>
           </div>
           <!-- Right: Toggle complete mode -->
           <a href="#">
-            <i class="bx bx-check-circle bx-sm text-blue-500"></i>
+            <i class="bx bx-check-circle bx-sm {% if task.done %}text-green-500{% else %}text-blue-500{% endif %}"></i>
             <!-- <i class='bx bxs-check-circle'></i> -->
           </a>
         </div>
@@ -34,12 +35,10 @@
         <!-- Bottom: Time and Date | Delete -->
         <div class="flex flex-row justify-between">
           <h2 class="text-gray-500 font-bold">
-            Due Today <span class="font-medium text-gray-400">12:00 pm</span>
+            Due {{ task.due_date }} <span class="font-medium text-gray-400">{{ task.due_time }}</span>
           </h2>
-          <a href="{% url "tasks:delete" %}">
-            <i class="bx bxs-trash bx-sm text-red-500"></i>
-          </a>
         </div>
       </div>
+      {% endfor %}
     </section>
 {% endblock main  %}
